# Embedded-Key-Value-Store

./: .gitignore  AI_Development_Workflow_Rules.md  CMakeLists.txt  Embedded_Key_Value_Store_AI_Prompt.md  README.md
bench/: CMakeLists.txt  bench_main.cpp
cmake/toolchains/: aarch64-linux-gnu.cmake
docs/: architecture.md  arm_qemu.md  interview_prep.md
examples/: CMakeLists.txt  basic.cpp
include/ekv/: append_log.hpp  compaction.hpp  crc32.hpp  error.hpp  hash_index.hpp  options.hpp  os_sync.hpp  record.hpp  recovery.hpp  stats.hpp  store.hpp  version.hpp
storage/: append_log.cpp  crc32.cpp  os_sync.cpp
store/: store.cpp
tests/: CMakeLists.txt  auto_compact_test.cpp  compaction_test.cpp  concurrency_test.cpp  options_test.cpp  recovery_test.cpp  smoke_test.cpp  store_test.cpp
